...
    private let photoImageView: UIImageView = {
        let image = UIImageView()
        image.translatesAutoresizingMaskIntoConstraints = false
        return image
    }()
    
    private let likeButton: UIButton = {
        let button = UIButton()
        button.accessibilityIdentifier = "likeButton"
        button.adjustsImageWhenDisabled = false
        button.translatesAutoresizingMaskIntoConstraints = false
        return button
    }()
...
